force-app/main/default/objects/BDMRoutingConfiguration__mdt/BDMRoutingConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for BDM for Routing Leads to BDM Managers and Users. Marketing OPS.</description>
    <label>BDMRoutingConfiguration</label>
    <pluralLabel>BDMRoutingConfigurations</pluralLabel>
</CustomObject>