force-app/main/default/objects/BDMRoutingConfiguration__mdt/fields/Default_BDM_User__c.field-meta.xml
<CustomField>
    <fullName>Default_BDM_User__c</fullName>
    <label>Default BDM User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>