force-app/main/default/objects/BDMRoutingConfiguration__mdt/fields/Federal_BMD_User__c.field-meta.xml
<CustomField>
    <fullName>Federal_BMD_User__c</fullName>
    <label>Federal BMD User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>