force-app/main/default/objects/BDMRoutingConfiguration__mdt/fields/SLG_BDM_User__c.field-meta.xml
<CustomField>
    <fullName>SLG_BDM_User__c</fullName>
    <label>SLG BDM User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>