force-app/main/default/objects/BDMRoutingConfiguration__mdt/listViews/ALL_VIEWS.listView-meta.xml
<ListView>
    <fullName>ALL_VIEWS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Default_BDM_User__c</columns>
    <columns>Federal_BMD_User__c</columns>
    <columns>SLG_BDM_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL VIEWS</label>
</ListView>